--- a/Task1/data_to_mongo.ipynb
+++ b/Task1/data_to_mongo.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = MongoClient(\"mongodb+srv://admin:12345@cluster0.jwzyj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")"
+    "client = MongoClient(\"mongodb+srv://admin:<password>@cluster0.jwzyj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")"
    ]
   },
   {
