--- a/Task4/Program/booking.ipynb
+++ b/Task4/Program/booking.ipynb
@@ -36,7 +36,7 @@
     "import plotly.express as px\n",
     "\n",
     "# Connect to MongoDB\n",
-    "client = MongoClient(\"mongodb+srv://admin:12345@cluster0.jwzyj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")\n",
+    "client = MongoClient(\"mongodb+srv://admin:<password>@cluster0.jwzyj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")\n",
     "db = client[\"bookings\"]\n",
     "\n",
     "# Fetch datasets\n",
